--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h4>PRAKHAR AGRAWAL</h4>
                         <p>
                             Team Leader,
-                            Model designer
+                            Machine Learning Engineer
                         </p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="overlay">
                         <h4>ARTH GUPTA</h4>
                         <p>
-                            MODEL designer
+                            BACK END DEVELOPER 
                         </p>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="overlay">
                         <h4>PRANAY MISHRA</h4>
                         <p>
-                            FRONT End
+                            FRONT END DEVELOPER
                         </p>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <div class="overlay">
                         <h4>PRASANG JHAWAR</h4>
                         <p>
-                            MODEL DESIGNER
+                            Machine Learning Engineer
                         </p>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     <div class="overlay">
                         <h4>ADITI PANDIT</h4>
                         <p>
-                            MEMBER
+                            BACK END DEVELOPER
                         </p>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="overlay" id="shruti">
                         <h4>SHRUTI VISHWAKARMA</h4>
                         <p>
-                            MEMBER
+                            Machine Learning Engineer
                         </p>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
         <div id="page4">
             <h1>TEST</h1>
             <div class="elem">
-                <h2>NOW</h2>
+                <a href="Html_medicinedetection-main/index.html"><h2>NOW</h2></a>
                 <img src="team_members/pexels-johannes-plenio-1632790 (2).jpg"
                     alt="">
             </div>
