--- a/index.html
+++ b/index.html
@@ -88,20 +88,21 @@
                     <div class="overlay">
                         <h4>PRANAY MISHRA</h4>
                         <p>
-                            FRONT END DEVELOPER
+                            Developer
+                        </p>
+                    </div>
+                </div>
+                <div class="cards" id="card4">
+                    <div class="overlay">
+                        <h4>PRASANG JHAWAR</h4>
+                        <p>
+                            Developer
                         </p>
                     </div>
                 </div>
             </div>
             <div id="card-container">
-                <div class="cards" id="card4">
-                    <div class="overlay">
-                        <h4>PRASANG JHAWAR</h4>
-                        <p>
-                            Machine Learning Engineer
-                        </p>
-                    </div>
-                </div>
+                
                
             </div>
 
